Feature - HTML parts are divided into React components with no app logic.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,6 +9,9 @@ body {
 button:focus, .btn:focus, button:active, .btn:active,
 a:focus, a:active {outline:0;}
 
+.page-title i{
+  color:#6CB2E7;
+}
 .socrata-footer-logo {
   display: inline-block;
   width:100px;
